[package]
name = "typed-arena"
version = "2.0.1"
authors = ["Simon Sapin <simon.sapin@exyr.org>", "Nick Fitzgerald <fitzgen@gmail.com>"]
license = "MIT"
description = "The arena, a fast but limited type of allocator"
documentation = "https://docs.rs/typed-arena"
repository = "https://github.com/SimonSapin/rust-typed-arena"
categories = ["memory-management", "no-std"]
keywords = ["arena"]
readme = "./README.md"
edition = "2018"

[lib]
name = "typed_arena"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[profile.bench]
debug = true

[dependencies]
tokio = { version = "0.2", features = ["sync", "rt-threaded", "macros"] }
futures = { version = "0.3" }
